// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityAvatarComponent should display CompanyLogoSource if AvatarSource === default_user.png and CompanyLogoSource !== null 1`] = `
<pf-community-avatar
  AvatarSource={[Function String]}
  CompanyLogoSource={[Function String]}
  IsReply="false"
  avatarUrl={[Function String]}
  companyLogoUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="https://qa00filestore001.blob.core.windows.net/publicfiles/company_logos/companyLogo.png"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display default avatar if AvatarSource === default_user.png 1`] = `
<pf-community-avatar
  AvatarSource={[Function String]}
  CompanyLogoSource="null"
  IsReply="false"
  avatarUrl={[Function String]}
  companyLogoUrl={[Function String]}
>
  <div
    class="float-left pf-avatar default-post-avatar"
  >
     
  
  </div>
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display post-size avatar if IsReply === false  1`] = `
<pf-community-avatar
  IsReply="false"
  avatarUrl={[Function String]}
  companyLogoUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="https://qa00filestore001.blob.core.windows.net/publicfiles/avatars/undefined"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display reply-size avatar if IsReply === true  1`] = `
<pf-community-avatar
  IsReply={[Function Boolean]}
  avatarUrl={[Function String]}
  companyLogoUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar reply-avatar"
    src="https://qa00filestore001.blob.core.windows.net/publicfiles/avatars/undefined"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should show avatar component 1`] = `
<pf-community-avatar
  IsReply="false"
  avatarUrl={[Function String]}
  companyLogoUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="https://qa00filestore001.blob.core.windows.net/publicfiles/avatars/undefined"
  />
</pf-community-avatar>
`;
